<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_padding"
    android:paddingLeft="@dimen/activity_padding"
    android:paddingRight="@dimen/activity_padding"
    android:paddingTop="@dimen/activity_padding"
    tools:context="com.grument.doittestproject.activity.RegistrationPickAvatarActivity">

    <ImageView
        android:id="@+id/iv_pick_user_avatar"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/before_pick_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/login_account_avatar" />

    <Button
        android:id="@+id/bt_pick_avatar"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/c800"
        android:text="@string/registration_pick_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_pick_user_avatar"
        tools:layout_editor_absoluteX="0dp" />


    <Button
        android:id="@+id/bt_registration_continue"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/c800"
        android:text="@string/registration_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_pick_avatar"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>
